--- a/word_count.ipynb
+++ b/word_count.ipynb
@@ -1,5 +1,14 @@
 {
   "cells": [
+  {
+        "cell_type": "markdown",
+        "metadata": {
+          "id": "0WPylkxI7S73"
+        },
+        "source": [
+          "# Maxime Boiral - Samuel Giorno - Lou Bruneau"
+        ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
