--- a/Lab3_StructuredStreaming.ipynb
+++ b/Lab3_StructuredStreaming.ipynb
@@ -414,6 +414,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -427,8 +428,11 @@
    "source": [
     "%sql\n",
     "-- Count all Open and Close actions in the table static_counts  \n",
-    "\n",
-    "    \n"
+    "SELECT\n",
+    "SUM(CASE WHEN action = 'Open' THEN count ELSE 0 END) as nbr_open,\n",
+    "SUM(CASE WHEN action = 'Close' THEN count ELSE 0 END) as nbr_close\n",
+    "FROM static_counts\n",
+    "\n"
    ]
   },
   {
@@ -438,6 +442,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -451,7 +456,15 @@
    "source": [
     "%sql\n",
     "-- How many actions (Close and Open separately) is within each time window (in the table static_counts)\n",
-    "-- Make a plot\n"
+    "-- Make a plot\n",
+    "SELECT\n",
+    "  window.start AS start_time,\n",
+    "  window.end   AS end_time,\n",
+    "  SUM(CASE WHEN action = 'Open'  THEN count ELSE 0 END) AS open_count,\n",
+    "  SUM(CASE WHEN action = 'Close' THEN count ELSE 0 END) AS close_count\n",
+    "FROM static_counts\n",
+    "GROUP BY window.start, window.end\n",
+    "ORDER BY start_time;\n"
    ]
   },
   {
@@ -713,6 +726,7 @@
     "    .format(\"memory\")        # memory = store in-memory table \n",
     "    .queryName(\"counts\")     # counts = name of the in-memory table\n",
     "    .outputMode(\"complete\")  # complete = all the counts should be in the table\n",
+    "    .option(\"checkpointLocation\", tmp_streaming_counts_run)\n",
     "    .trigger(availableNow=True)\n",
     "    .start()\n",
     ")"
